cloud/istio/v1.18/1-virtual-service/manifest/network-tester.yaml
apiVersion: v1
kind: Pod
metadata:
  name: network-tester
spec:
  containers:
    - name: netshoot
      image: nicolaka/netshoot:v0.9
      command: ['/bin/sh', '-c', 'while true; do echo $(date); sleep 1; done']
