cloud/istio/v1.18/1-virtual-service/manifest/all-with-istio.yaml
# Gateway
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: hellokv-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hellokv
spec:
  hosts:
  - "*"
  gateways:
  - hellokv-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: hellokv
---
# hellokv and its service
apiVersion: v1
kind: Service
metadata:
  name: hellokv
  labels:
    app: hellokv
    service: hellokv
spec:
  ports:
  - port: 8888
    name: http
  selector:
    app: hellokv
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hellokv-v1
  labels:
    app: hellokv
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hellokv
      version: v1
  template:
    metadata:
      labels:
        app: hellokv
        version: v1
    spec:
      containers:
      - name: app
        image: hellokv:latest
        # KiND - How I Wasted a Day Loading Local Docker Images
        # https://iximiuz.com/en/posts/kubernetes-kind-load-docker-image/
        imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: network-tester
spec:
  replicas: 1
  selector:
    matchLabels:
      app: network-tester
  template:
    metadata:
      labels:
        app: network-tester
    spec:
      containers:
      - name: netshoot
        image: nicolaka/netshoot:v0.9
        command: ['/bin/sh', '-c', 'while true; do echo $(date); sleep 1; done']
---
# gateway
